styles/products.scss
// `<article>
//    <div class="price">$${product.price}</div>
//      <img src=${product.photo_url} alt="photo_url">
//       <div class="product">
//      <div class="productName">${product.name}</div>
//    <div class="description">${product.description}</div>
//       </div>
//           </article>`
.product-container {
  padding: 24px;
}

article {
  margin: 40px 40px 10px 10px;
  border: 1px solid #d8a8a8;
  border-radius: 8px;
  background-color: #ffafcc5e;
}

article img {
  width: 100px;
  height: 100px;
  margin-right: 16px;
}
article:hover {
  box-shadow: 10px 10px 0px 0px rgba(229, 6, 136, 0.364);
}

main section article .price-tag {
  float: right;
  margin-right: 25px;
  font-family: "Josefin Sans", sans-serif;
}

.btn-warning {
  height: inherit;
  flex-flow: column-reverse;
  justify-content: center;
  background-color: #f307ff5c;
  font-weight: 600;
}

main section article div .fa-dollar-sign {
  color: green;
}
main section article div .fa-dollar-sign:hover {
  color: greenyellow;
}
.product {
  display: flex;
  padding: 16px;
}

.price {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  background-color: #ffc8dd;
  height: 33px;
  border-radius: 0px 8px 0px 0px;
}

.price:hover {
  cursor: pointer;
}
.productName {
  text-align: start;
  size: 24;
  font-weight: bold;
  margin-bottom: 8px;
  text-transform: uppercase;
  font-family: "Josefin Sans", sans-serif;
  color: #dc419d;
  text-shadow: 1px 1px;
}

.description {
  font-weight: 600;
  width: fit-content;
}

#login,
#register {
  cursor: pointer;
  background-color: #ffc8dd5b;
}
.header-for-main {
  text-shadow: 1px 1px;
}

@media only screen and (max-width: 600px) {
  body {
    font-size: 20px;
  }
  article {
    height: 350px;
    overflow: scroll;
    text-overflow: ellipsis;
  }
  .description {
    width: auto;
  }
  .product {
    flex-flow: column;
    align-items: center;
    width: auto;
  }
  .product-container {
    padding: 0px 14px 14px 14px;
  }

  .price {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    height: 33px;
  }

  article img {
    width: 125px;
    height: 135px;
    margin-right: 16px;
    border: 2px solid #dc419d;
    border-radius: 15px;
  }

  .productName {
    text-align: center;
    margin-top: 10px;
    font-size: 20px;
  }
  .price-tag {
    font-size: 22px;
  }
}

